--- a/css/index.css
+++ b/css/index.css
@@ -459,10 +459,13 @@ a {
   color: #665822;
   border: 2px solid #665822;
   background-color: #fff;
-
+  font-size: 18px;
   outline: none;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+@media screen and (max-width: 767.98) {
 }
 
 .modal-button:hover {
