--- a/css/index.css
+++ b/css/index.css
@@ -483,13 +483,39 @@ a {
   margin-bottom: 15px;
 }
 
-.form-wrapper {
-  display: flex;
+.filter-title::after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: rgba(102, 88, 34, 0.2);
+  display: block;
+  margin-top: 40px;
 }
 
-.price {
-  flex: 1;
+.form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-wrapper {
+  width: 100%;
+  position: relative;
+  border-bottom: 2px solid rgba(102, 88, 34, 0.2);
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.form-wrapper > div {
+  width: calc(50% - 40px);
+  margin-right: 0;
+}
+
+.form-wrapper > div:nth-child(1) {
   margin-right: 80px;
+}
+
+.form-wrapper {
+  display: flex;
 }
 
 .price-input {
@@ -582,10 +608,6 @@ input[type='range']::-moz-range-thumb {
 
 /* bees */
 
-.bees {
-  flex: 1;
-}
-
 .bees-list {
   display: flex;
   flex-direction: column;
@@ -633,4 +655,351 @@ input[type='range']::-moz-range-thumb {
 
 .bees-text {
   color: #665822;
+}
+
+/*  */
+
+.rating fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.rating-star {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  margin: 0;
+  font-size: inherit;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-size: 25px auto;
+  background-repeat: repeat-x;
+  cursor: pointer;
+}
+
+.rating-star:focus {
+  outline: none;
+}
+
+.rating-star:checked,
+.rating-star:hover {
+  background-image: url(../image/on.svg);
+}
+
+.rating-star:hover ~ .rating-star {
+  background-image: url(../image/off.svg);
+}
+
+.rating-star:nth-of-type(1) {
+  z-index: 5;
+  width: 25px;
+}
+
+.rating-star:nth-of-type(2) {
+  z-index: 4;
+  width: 50px;
+}
+.rating-star:nth-of-type(3) {
+  z-index: 3;
+  width: 75px;
+}
+.rating-star:nth-of-type(4) {
+  z-index: 2;
+  width: 100px;
+}
+.rating-star:nth-of-type(5) {
+  z-index: 1;
+  width: 125px;
+}
+.rating-group {
+  position: relative;
+  height: 25px;
+  width: 125px;
+  background-image: url(../image/off.svg);
+  background-size: 25px auto;
+  background-repeat: repeat-x;
+}
+
+/* Producer */
+
+.producer-label {
+  display: flex;
+  align-items: center;
+}
+
+.producer-item {
+  margin-bottom: 15px;
+}
+
+.producer-item:last-child {
+  margin-bottom: 0px;
+}
+
+.producer-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.producer-box {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: #fff;
+  background-origin: border-box;
+  border-radius: 50%;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.producer-input:checked + .producer-box {
+  background: url(../image/check.svg) center center no-repeat;
+  background-color: #fff;
+}
+
+.producer-input:disabled ~ .producer-box {
+  border: 2px solid rgba(102, 88, 34, 0.5);
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.producer-input:disabled ~ svg {
+  fill: rgba(102, 88, 34, 0.5);
+}
+
+.producer svg {
+  cursor: pointer;
+  fill: #665822;
+}
+
+/* Select */
+
+.mult-select-tag {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-color: 0 1px 3px 0 var(--tw-shadow-color),
+    0 1px 2px -1px var(--tw-shadow-color);
+  --border-color: rgb(218, 221, 224);
+  font-family: Verdana, sans-serif;
+}
+
+.mult-select-tag .wrapper {
+  width: 100%;
+}
+
+.mult-select-tag .body {
+  display: flex;
+  border: 1px solid var(--border-color);
+  background: white;
+  min-height: 2.15rem;
+  width: 100%;
+  min-width: 14rem;
+}
+
+.mult-select-tag .input-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  padding: 0.1rem;
+}
+
+.mult-select-tag .input-body {
+  display: flex;
+  width: 100%;
+  display: none;
+}
+
+.mult-select-tag .input {
+  flex: 1;
+  background: transparent;
+  border-radius: 0.25rem;
+  padding: 0.45rem;
+  margin: 10px;
+  color: #2d3748;
+  outline: 0;
+  border: 1px solid var(--border-color);
+}
+
+.mult-select-tag .btn-container {
+  color: #e2ebf0;
+  padding: 0.5rem;
+  display: flex;
+  border: none;
+}
+
+.mult-select-tag button {
+  cursor: pointer;
+  width: 100%;
+  color: #718096;
+  outline: 0;
+  height: 100%;
+  border: none;
+  padding: 0;
+  background: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+  text-transform: none;
+  margin: 0;
+}
+
+.mult-select-tag button:first-child {
+  width: 1rem;
+  height: 90%;
+}
+
+.mult-select-tag .drawer {
+  position: absolute;
+  background: white;
+  max-height: 15rem;
+  z-index: 40;
+  top: 98%;
+  width: 100%;
+  overflow-y: scroll;
+  border: 1px solid var(--border-color);
+  border-radius: 0.25rem;
+}
+
+.mult-select-tag ul {
+  list-style-type: none;
+  padding: 0.5rem;
+  margin: 0;
+}
+
+.mult-select-tag ul li {
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.mult-select-tag ul li:hover {
+  background: rgb(243 244 246);
+}
+
+.mult-select-tag .item-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #333333;
+  padding: 0.2rem 0.4rem;
+  height: 35px;
+  margin: 0.2rem;
+  font-weight: 500;
+  border: none;
+  background: #fff;
+  border-radius: 9999px;
+}
+
+.mult-select-tag .item-label {
+  max-width: 100%;
+  line-height: 1;
+  font-size: 14px;
+  font-weight: 400;
+  flex: 0 1 auto;
+  color: #333333;
+  margin-left: 20px;
+}
+
+.mult-select-tag .item-close-container {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: row-reverse;
+}
+
+.mult-select-tag .item-close-svg {
+  position: absolute;
+  top: 26%;
+  left: 0;
+  width: 1rem;
+  margin-left: 0.5rem;
+  height: 1rem;
+  cursor: pointer;
+  border-radius: 9999px;
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
+.mult-select-tag .rounded {
+  border-radius: 0.375rem;
+}
+
+/* cloth */
+
+.cloth fieldset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+.cloth-group {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+/* .cloth-group .cloth-star:checked .cloth-label {
+  background-color: red;
+} */
+
+.cloth-star {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.cloth-label {
+  width: 80px;
+  height: 80px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.form-buttons {
+  display: flex;
+}
+
+.form-btn {
+  padding: 15px 30px;
+  border: 3px solid #665822;
+  color: #665822;
+  cursor: pointer;
+  margin-right: 100px;
+  background-color: #ffdc55;
+  transition: background-color 250ms ease;
+}
+
+.form-btn:last-child {
+  margin-right: 0;
+}
+
+.form-btn:hover {
+  background-color: #665822;
+  outline: none;
+  color: #ffdc55;
 }
